[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://Sprites/YellowTriangle.png" type="Texture" id=3]
[ext_resource path="res://Scenes/WorldEnvironment.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Tilesets/TilesetWhite.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="LevelSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TilesetWhite" parent="." instance=ExtResource( 5 )]
scale = Vector2( 3, 3 )
tile_data = PoolIntArray( 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.0
margin_top = -219.0
margin_right = 357.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 714.0
margin_bottom = 54.0
theme = ExtResource( 1 )
text = "2 Players"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 714.0
margin_bottom = 122.0
alignment = 1

[node name="Level1For2Players" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 139.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "1"

[node name="Level2For2Players" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 143.0
margin_right = 283.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "2"
icon_align = 1

[node name="Level3For2Players" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 426.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "3"

[node name="Level4For2Players" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 430.0
margin_right = 570.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "4"

[node name="Level5For2Players" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 574.0
margin_right = 714.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "5"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 714.0
margin_bottom = 180.0
theme = ExtResource( 1 )
text = "3 Players"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 714.0
margin_bottom = 248.0
alignment = 1

[node name="Level1" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 139.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "1"

[node name="Level2" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 143.0
margin_right = 283.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "2"
icon_align = 1

[node name="Level3" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 287.0
margin_right = 426.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "3"

[node name="Level4" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 430.0
margin_right = 570.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "4"

[node name="Level5" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 574.0
margin_right = 714.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "5"

[node name="YellowTriangle" type="Sprite" parent="."]
position = Vector2( 792, 408 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
flip_h = true

[node name="WorldEnvironment" parent="." instance=ExtResource( 4 )]

[node name="Transition" parent="." instance=ExtResource( 6 )]
anims/Transition = SubResource( 1 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level1For2Players" to="." method="_on_Level1For2Players_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level2For2Players" to="." method="_on_Level2For2Players_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level3For2Players" to="." method="_on_Level3For2Players_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level4For2Players" to="." method="_on_Level4For2Players_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level5For2Players" to="." method="_on_Level5For2Players_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level5" to="." method="_on_Level5_pressed"]
